# Backend-Server

./: .env  .gitignore  Cargo.toml  Cargo.tomlc  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.debug.yml  docker-compose.yml
.github/workflows/: tele.yml
Started/: .dockerignore  .qovery.yml.tmp  Cargo.toml  Dockerfile  README.md
Started/src/app/modules/: mod.rs
Started/src/app/modules/users/: lib.rs  mod.rs  users.rs
Started/src/config/: config.rs
Started/src/core/: mod.rs
Started/src/middleware/: auth.rs  mod.rs  read_response_body.rs
migrations/2020-08-01-061812_create_users/: up.sql
services/authenticate/: .env  Cargo.toml  docker-compose.yml
services/authenticate/.cargo/: config.toml
services/authenticate/src/: config.rs  main.rs  rabbit_queue.rs
services/authenticate/src/app/: lib.rs  routes.rs
services/authenticate/src/app/controllers/: mod.rs  users.rs
services/authenticate/src/app/modules/: authenticate.rs  mod.rs  token.rs
services/authenticate/src/core/: db.rs  db_utils.rs  mod.rs  nats_server.rs  redis_db.rs  users_db.rs
services/authenticate/src/middleware/: auth.rs
services/authenticate/src/models/: mod.rs  response.rs  token.rs
services/booking/: Cargo.toml
services/cinema_catalog/: Cargo.toml
services/common_lib/: Cargo.toml  conf.json
services/common_lib/.cargo/: config.toml
services/common_lib/src/: main.rs
services/common_lib/src/core/: errors.rs
services/common_lib/src/database/: mod.rs  redisdb.rs
services/common_lib/src/middleware/: read_request_body.rs
services/common_lib/src/queue/: rabbitmq.rs
services/common_lib/src/services/: email_service.rs  mod.rs  redis.rs
services/common_lib/src/utils/handlers/: mod.rs
services/mails/: Cargo.toml
services/movie/: Cargo.toml  config.rs
services/movie/.cargo/: config.toml
services/movie/src/: config.rs  main.rs
services/movie/src/app/: lib.rs  mod.rs  routes.rs
services/movie/src/app/modules/: mod.rs  movies.rs
services/movie/src/core/: errors.rs  mod.rs
services/movie/src/core/db/: db.rs  db_utils.rs  mod.rs  movie_db.rs
services/movie/src/core/models/: mod.rs  movies.rs
services/notifications/: Cargo.toml
services/payments/: Cargo.toml
services/users/: .env  Cargo.toml  Readme.md  docker-compose.yml
services/users/src/: config.rs  errors.rs  main.rs  nats_broker.rs  nats_server.rs  rabbit_server.rs
services/users/src/app/: lib.rs  mod.rs  routes.rs
services/users/src/app/controllers/: login.rs  mod.rs  nats_client.rs  register.rs  users.rs
services/users/src/app/modules/: health.rs  login.rs  mod.rs  register.rs  users.rs
services/users/src/app/modules/users/: login.rs  users.rs
services/users/src/app/routes/: mod.rs  users_route.rs
services/users/src/core/: db_utils.rs  errors.rs  mod.rs  nats_server.rs  rabbit_server.rs  users_db.rs
services/users/src/core/db/: db.rs  mod.rs  rabbit_queue.rs  users_db.rs
services/users/src/core/models/: response.rs  users.rs
services/users/src/models/: mod.rs  nats_message.rs  response.rs  users.rs
services/users/src/utils/: hasher.rs
src/: main.rs
src/app/: api_util.rs  lib.rs  mod.rs
src/app/modules/: cb_comfirm_email.rs  cb_users.rs  health.rs  lib.rs  login.rs  mod.rs
src/app/modules/users/: confirm_mail.rs  lib.rs  mod.rs  register.rs  users.rs
src/app/routes/: article_route.rs  mod.rs  routes.rs  users_route.rs
src/chatter/: chat.rs
src/config/: config.rs  constant.rs
src/core/: errors.rs  mod.rs
src/core/db/: .users_db.rs  confirm_db.rs  db.rs  db_utils.rs  mod.rs  users_db.rs
src/core/models/: api_response.rs  mod.rs  response.rs  schema.rs  users.rs
src/core/services/: email_service.rs
src/middleware/: auth.rs  mod.rs  read_request_body.rs  read_response_body.rs
src/server/: mod.rs  server.rs  state.rs
src/server/handlers/: errors.rs  hasher.rs  helpers.rs  mod.rs  prelude.rs
src/services/: email_service.rs  mod.rs  redis.rs
src/utils/handlers/: errors.rs  helpers.rs  json_body.rs  jwt.rs  mod.rs
src/utils/middleware/: auth.rs
static/: index.html
