[package]
name = "started"
version = "0.1.0"
authors = ["DianaSensei <43933486+DianaSensei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-files = "0.2.2"
actix-web = "3.0.0-alpha.1"
actix-rt = "1.1.1"
actix-identity = "0.2.1"
actix-http = "2.0.0-beta.3"
actix-session = "0.3.0"
actix-cors = "0.2.0"

native-tls = "0.2.4"
# http = "0.2"

envy = "0.4"
#log = "0.4.11"
env_logger = "0.7.1"
dotenv = "0.15"
#url = "2.1"
yarte = "0.12.2"

#oauth2 = { version = "3.0", default-features = false }
listenfd = "0.3"

#base64 = "0.12"
#rand = "0.7"
bson = "1.0.0"
mongodb = "1.0.0"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }

serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
derive_more ="0.99.9"

#num_cpus = "1.13.0"
failure = "0.1.8"

#rayon = "1.3.1"
jsonwebtoken = "7.2.0"
#rust-crypto = "0.2.36"
libreauth = "0.13.0"

futures = "0.3.5"
tokio = "0.2"
once_cell = "1.4.0"

lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.16"

regex = "*"
validator = "0.10.1"
validator_derive = "0.10.1"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
chrono = {version = "0.4", features=["serde"]}
lazy_static ="1.4"