[package]
name = "started"
version = "0.1.0"
authors = ["DianaSensei <43933486+DianaSensei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [target.x86_64-unknown-linux-gnu]
# rustflags = [
#     "-C", "link-arg=-fuse-ld=lld",
# ]

# [profile.release]
# lto = true
# opt-level = 2

[dependencies]
actix = "0.10"
#actix-files = "0.2.2"
actix-web = "3.1"
actix-rt = "1.1"
# actix-identity = "0.3"
# actix-http = "2.0"
# actix-session = "0.4"
# actix-cors = "0.5"
# hyper="0.13"
# reqwest="0.10"

# kafka="0.8"
# lapin="1.4"

# cookie="0.14"
# openssl="0.10"

native-tls = "0.2.4"
# http = "0.2"

# redis="0.17"
# elasticsearch = "7.9.0-alpha.1"


envy = "0.4"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
# yew="0.17"
#url = "2.1"
#yarte = "0.12.2"

#oauth2 = { version = "3.0", default-features = false }
listenfd = "0.3"

#base64 = "0.12"
rand = "0.7"
bson = "1.1.0"
mongodb = { version = "1.1.1", default-features = false , features = ["async-std-runtime"] }
#mongodb = "1.1.1"
#diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more ="0.99"

#num_cpus = "1.13.0"
failure = "0.1.8"

#rayon = "1.3.1"
jsonwebtoken = "7.2.0"
#rust-crypto = "0.2.36"
# base64="0.13"
libreauth = "0.13.0"

futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
once_cell = "1.4"

lettre = "0.9"
lettre_email = "0.9"
#mime = "0.3.16"

# regex = "*"
validator = "0.11"
validator_derive = "0.11"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
chrono = {version = "0.4", features=["serde"]}
# time="0.2"
lazy_static ="1.4"