[package]
name = "authenticate"
version = "0.1.0"
authors = ["thong.nguyen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"
#hyper="0.13"
#reqwest="0.10"
# async-trait = "0.1"
nats = "0.8"
lapin="1.6"
mobc-lapin = "0.5"
#cookie="0.14"
#openssl="0.10"

#http = "0.2"

redis = "0.17"
mobc = "0.5"
mobc-redis = "0.5"
thiserror = "1.0"
#elasticsearch = "7.9.0-alpha.1"
meilisearch-sdk = "0.4"

envy = "0.4"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"

# oauth2 = { version = "3.0", default-features = false }
listenfd = "0.3"

#base64 = "0.12"
rand = "0.7"
bson = "1.1.0"
mongodb = { version = "1.1.1", features = ["async-std-runtime"], default-features = false }

# diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more ="0.99"

failure = "0.1.8"

# rayon = "1.5"
# jsonwebtoken = "7.2.0"
# rust-crypto = "0.2.36"
# base64="0.13"
libreauth = "0.14.0"

futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
once_cell = "1.5"

# mime = "0.3.16"

# regex = "*"
validator = { version = "0.12", features= ["phone"] }
validator_derive = { version = "0.12", features = ["phone"] }
uuid = { version = "0.8.1", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }
lazy_static ="1.4"