[package]
name = "common_lib"
version = "0.1.0"
authors = ["DianaSensei <43933486+DianaSensei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version="1.1", features = ["tokio-runtime"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "1.1"
tokio = {version="0.3", features = ["full"]}
actix-rt = "1.1"
redis ="0.17"